# FoBiS

./: .checkignore  .coverage  .gitignore  .landscape.yaml  .pylintrc  .travis.yml  CHANGELOG.md  CLAUDE.md  FoBiS.py  Makefile  README.md  build.py  bump.sh  cliff.toml  fobos  pypi-build-upload.md  pyproject.toml  release.sh
.github/: dependabot.yml
.github/workflows/: docs.yml  python-package.yml
docs/: index.md  make_gifs.sh  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/advanced/: architecture.md  auto-discovery.md  build-profiles.md  cache.md  cflags-heritage.md  commit.md  doctests.md  externals.md  features.md  fetch.md  includes.md  index.md  install.md  interdependent.md  json-output.md  libraries.md  lock-file.md  makefile.md  parallel.md  preform.md  scaffold.md  testing.md  varsets.md  volatile-libs.md
docs/demo/: fobos
docs/examples/: basic.md  index.md  interdependent.md  library.md  preform.md
docs/fobos/: complete-example.md  index.md  intrinsic-rules.md  many-modes.md  project.md  rules.md  single-mode.md  templates.md  variables.md
docs/guide/: changelog.md  claude-skill.md  compilers.md  contributing.md  index.md  installation.md  quickstart.md  shell-completion.md
docs/reference/: build.md  cache.md  check.md  clean.md  commit.md  coverage.md  doctests.md  fetch.md  install.md  introspect.md  rule.md  run.md  scaffold.md  test.md  tree.md
example/: fobos
examples/PreForM-integration/: README.md  fobos
examples/cumbersome_dependency_program/: README.md  fobos  fobos.custom  fobos.g95  fobos.gnu  fobos.intel
examples/cumbersome_dependency_program_coverage/: README.md  fobos
examples/cumbersome_dependency_program_external_libs/: README.md  fobos
fobis/: Builder.py  Cache.py  Cleaner.py  Colors.py  Commit.py  Compiler.py  Coverage.py  Dependency.py  Doctest.py  Externals.py  Fetcher.py  FoBiSConfig.py  Fobos.py  Gcov.py  ParsedFile.py  PkgConfig.py  Profiles.py  Scaffolder.py  SemVer.py  TestRunner.py  UserConfig.py  __init__.py  __main__.py  cli_parser.py  fobis.py  utils.py
fobis/cli/: __init__.py  _app.py  (+18 more)
tests/: .coverage  conftest.py  helpers.py  suite_tests.py  test_auto_discover.py  test_build.py  test_cache.py  test_clean.py  test_commit.py  test_compiler_lfortran.py  test_coverage.py  test_doctest.py  test_externals.py  test_features.py  test_fetch.py  test_gcov.py  test_includes.py  test_install.py  test_makefile.py  test_multitarget.py  test_pkgconfig.py  test_profiles.py  test_rules.py  test_run.py  test_scaffold.py  test_semver.py  test_template.py  test_testrunner.py  test_tree.py  test_userconfig.py  test_variables.py
(+582 files in other folders)
