[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FoBiS.py"
dynamic = ["version"]
description = "a Fortran Building System"
readme = "README.md"
license = { text = "GNU General Public License v3 (GPLv3)" }
authors = [{ name = "Stefano Zaghi", email = "stefano.zaghi@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing",
]
dependencies = [
  "typer>=0.9.0,<2.0",
  "colorama>=0.4 ; platform_system=='Windows'",
]

[project.optional-dependencies]
PreForM = ["PreForM.py>=v1.1.1"]
FORD    = ["FORD>=1.1.0"]
graphviz = ["graphviz>=0.4.2"]
dev = ["build", "twine", "ruff", "pytest", "pytest-cov", "git-cliff"]

[project.scripts]
fobis    = "fobis.fobis:main"
"FoBiS.py" = "fobis.fobis:main"

[project.urls]
Homepage = "https://github.com/szaghi/FoBiS"

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = []

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = [
  "E501",   # line too long — existing codebase has long lines
  "N999",   # invalid-module-name — PascalCase filenames are a project convention
  "SIM102", # collapsible-if — style preference
  "SIM108", # ternary operator — style preference
  "UP031",  # printf-string-formatting — separate cleanup
  "B006",   # mutable-argument-default — needs review
  "B020",   # loop-variable-overrides-iterator — needs review
  "E741",   # ambiguous-variable-name — existing code convention
  "N802",   # invalid-function-name — existing code
  "RUF012", # mutable-class-default — needs review
  "RUF046", # unnecessary-cast-to-int — needs review
  "SIM201", # negate-equal-op — style preference
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N"]
"fobis/cli/*.py" = ["F403", "F405"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["fobis"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 60

[tool.setuptools.dynamic]
version = { attr = "fobis.__version__" }

[tool.setuptools.packages.find]
include = ["fobis*"]
